--- a/assets/application.scss
+++ b/assets/application.scss
@@ -1,1 +1,17 @@
 @import '~bootstrap/scss/bootstrap';
+
+.modal-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.3;
+    background-color: #747474;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    display: block;
+}
+
+.modal-dialog {
+    z-index: 101;
+}
