--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -2,18 +2,12 @@ doctype html
 html.h-100(lang="en")
   head
     title= Title
-    // script(src=assetPath('main.css'))
     script.
       var gon = !{JSON.stringify(gon)};
   body.d-flex.flex-column.h-100
     nav.navbar.navbar-expand-lg.navbar-light.bg-faded
-      a.navbar-brand(href="/") Chat
-      button.navbar-toggler(data-toggle="collapse" data-target="#navbarSupportedContent")
-        span.navbar-toggler-icon
-      .collapse.navbar-collapse
-        ul.navbar-nav.mr-auto
-          li.nav-item.active
-            a.nav-link(href="/") Home
+      a.navbar-brand(href="/") Slack by
+      a.navbar-brand(href="https://github.com/SuchkovSergey") Suchkov Sergey
     .container-lg.h-100.overflow-hidden.border-top
       .h-100#chat
     script(src=assetPath('main.js'))
